tests/ok/module_file_source.ari
pub fn value() -> i64 {
  return 6;
}
