tests/errors/layout-query-type-args.ari
fn main() -> i64 {
  return size_of();
}
